# cascadya

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  agents.md  alembic.ini  app.py  config.yml  connection_aeolus_api.py  daniel_cascadya  docker-compose.yml  main.py  plots.py  pyproject.toml  tree structure.txt
.github/workflows/: ci_pipeline.yml  python-app.yml
IEC104/ansible/: deploy_iec104_bridge.yml  docker-compose.yml.j2  inventory.yml
IEC104/src/: Dockerfile  requirements.txt  server.py
Infra-MVP/: .gitignore  ARCHITECTURE_ACTUELLE_PRD.md  CONTROL_PANEL_SCALEWAY_RULES.md  CONTROL_PANEL_VM_PRD.md
Mosquitto Scripts/Test Connection Loris/: dispatcher_private.py  test_cmarket_connection_VPN.py
Mosquitto Scripts/Test Debit Max MQTT/: async_sender_benchmark.py  hq_benchmark_receiver.py
Mosquitto Scripts/Test Debit Max Nats Core/: nats_receiver_benchmark.py  nats_sender_benchmark.py
alembic/: env.py
c-market/: .dockerignore  Dockerfile  app.py  docker-compose.yml
c-market/src/: aeolus_market_bridge.py  (+9 more)
cascadya-edge-os-images/: .gitattributes  .gitignore  README.md  build.sh
docker/: entrypoint.sh
extras/: wgo.conf
notebooks/: 1.0-lam-inariz-data-exploration.ipynb  2.0-lam-analyse-prix-ecarts.ipynb  4.0-lam-test-rte_total_forecast.ipynb  5.0-lam-steriflow-mpi1-exploration.ipynb  6.0-lam-arima-temp.ipynb
playbook_ansible/: .gitignore
python script/: file to tree.py  format text.py  loader.py  script_descriptions.json  test brevo mail.py  test noreply mail.py
python script/modbus_scan/: README.md  pyproject.toml
python script/modbus_scan/docs/: PRD_MVP_Modbus_Scanner.md
python script/modbus_scan/modbus_scan/: __init__.py  __main__.py  cli.py  client.py  exporters.py  governor.py  models.py  profiler.py  scanner.py  simulator.py  utils.py
python script/modbus_scan/tests/: test_mvp.py
src/: __init__.py  aeolus_client.py  aeolus_market_bridge.py  aeolus_models.py  autres.py  connection_aeolus_api.py  data_treatment_inariz.py  data_treatment_prix_ecarts.py  data_treatment_tarkett.py  dataset.py  forecast_backoffice.py  ingest.py  main.py  market_orders.py  market_orders_paths.py  predict.py  train.py  utils.py
steps/: data_treatment_inariz.py  data_treatment_tarkett.py  evaluate.py  ingest.py  predict.py  train.py  utils.py
tests/: copy_median_value_test.csv  test_aeolus_market_bridge.py  test_aeolus_models_utc_datetime.py  test_app_publish_market_orders.py  test_app_resolve_market_orders_csv_path.py  test_app_smoke.py  test_dataset_resample.py  test_forecast_backoffice.py  test_forecast_backoffice_unit.py  test_market_orders.py  test_naive_prediction_functions.py  test_predict_copy_median_values.py  test_utils_convert_units.py
(+773 files in other folders)
